Improving Performance Part 1: Data-structures Continued in Part 2: Using Deltas (This is a temp commit, if you can't tell)